Modified: en Banner se agrega carousel y se agrega tamaño de imagenes del carousel en app.css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,6 +38,11 @@ html, body { overflow-x: hidden; }
     height: 300px;
 }
 
+.imgcarouselitem {
+    width: 20em;
+    height: 20em;
+}
+
 .galeriahome {
     padding-top: 7em;
 }
